[package]
name = "rafty"
version = "0.1.0"
edition = "2018"
authors = ["Al Liu <scygliu1@gmail.com>"]
categories = ["algorithms", "asynchronous", "data-structures", "distributed"]
description = "Raft algorithm implementation based on Tokio async runtime."
documentation = "https://docs.rs/rafty"
homepage = "https://github.com/al8n/rafty"
keywords = ["raft", "consensus"]
license = "Apache-2.0"
repository = "https://github.com/al8n/rafty"
readme = "./README.md"

[features]
sync = ["crossbeam"]
default = ["tokio", "futures", "tracing-futures", "tonic", "tonic-build", "prost"]

[dependencies.crossbeam]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1.9"
features = ["full"]
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.tracing-futures]
version = "0.2.5"
optional = true

[dependencies.tonic]
version = "0.5.0"
optional = true

[dependencies.prost]
version = "0.8.0"
optional = true

[dependencies]
bytes = "1.0.1"
chrono = {version = "0.4.19", features = ["serde"]}
lazy_static = "1.4.0"
log = "0.4"
metrics = "0.16.0"
rmp-serde = "0.15.5"
parking_lot = "0.11"
parse-display = "0.5.0"
rand = "0.8"
serde_json = "1"
serde_derive = "1"
serde = { version="1", features=["derive"] }
sonyflake = "0.1.1"
tracing = "0.1.26"

[build-dependencies.tonic-build]
version = "0.5.1"
optional = true

[build-dependencies]
autocfg = "1"
