[package]
name = "sync-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rafty = { path = "../../../rafty", features = ["sync"], default-features = false }
chrono = {version = "0.4.19", features = ["serde"]}
metrics = "0.16.0"

[dependencies.crossbeam]
version = "0.8"